# llm_products

./: .env  .env.example  .gitignore  README.md  main-old.py  medium.md  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/schemas/: models.py
backend/app/services/: document_processor_service.py  llm_service.py  vector_store_service.py
backend/app/utils/: file_processing.py
backend/vector_store/chroma_db/: chroma.sqlite3
frontend/: app.py  requirements.txt
vector_store/chroma_db/: chroma.sqlite3
