[project]
name = "rag-application-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.8",
    "cryptography>=44.0.3",
    "fastapi>=0.115.9",
    "google-api-core>=2.24.2",
    "google-generativeai>=0.8.5",
    "langchain-text-splitters>=0.3.8",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.2",
]
